@@ -38,7 +38,11 @@ namespace WTF {
 
 #ifndef NDEBUG
     private:
+#if COMPILER(MINGW) || COMPILER(MSVC7_OR_LOWER) || OS(WINCE)
+        int m_count;
+#else
         volatile int m_count;
+#endif
         const char* m_description;
 #endif
     };
